OpenPnP local-test install system; zoom/pan upstream drafts (#10)
- local-test branch + worktree + deployed-install workflow documented in
  OpenPnP_Dev_Guidelines.md (Local test install section; Maven and
  --add-opens build notes)
- bin/pnp renamed to pnp26 (stock v2.6 fallback); new bin/pnptest runs
  the deployed local-test build; bin/openpnp-deploy builds and copies it
  out of the worktree; bin/openpnp-changes lists CHANGES.md bullets and
  first-parent commits between refs
- upstream-drafts/pipeline-editor-zoom-pan.md: held-back openpnp#569
  comment and PR template for the MatView zoom/pan feature, plus run
  instructions

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01PynYbN2H3xfWjR8ygaHxcB